--- a/HangerApplication/app/src/main/res/layout/activity_edit_closet.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_edit_closet.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:minHeight="400dp"
@@ -15,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="225dp"
         android:layout_gravity="center"
-        android:src="@drawable/tempimg" />
+        android:src="@drawable/default1" />
 
     <!--
 	<TextView
@@ -29,7 +28,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="47dp"
         android:background="#ffffff"
         android:padding="5dp">
 
@@ -37,7 +36,6 @@
             android:id="@+id/catagorytext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
             android:padding="10dp"
             android:text="카테고리"
             android:textColor="#000000"
@@ -54,8 +52,7 @@
             android:lines="1"
             android:singleLine="true"
 
-            android:textSize="15dp"
-            tools:ignore="NotSibling" />
+            android:textSize="15dp" />
 
 
     </RelativeLayout>
@@ -79,12 +76,11 @@
         <Spinner
             android:id="@+id/seasonspinner"
             android:layout_width="240dp"
-            android:layout_height="30dp"
-            android:layout_alignParentStart="true"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="155dp"
-            android:textColor="#000000"
             android:entries="@array/season"
+            android:textColor="#000000"
             android:touchscreenBlocksFocus="false"
             android:transitionGroup="true" />
 
@@ -93,7 +89,38 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="48dp"
+        android:background="#ffffff"
+        android:padding="5dp">
+
+        <TextView
+            android:id="@+id/colortext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:padding="10dp"
+            android:text="색깔"
+            android:textColor="#000000"
+            android:textSize="15dp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/color_Edittext"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/tagtext"
+            android:layout_alignParentEnd="true"
+            android:lines="1"
+            android:singleLine="true"
+            android:textColor="#000000"
+            android:textSize="15dp" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="47dp"
         android:background="#ffffff"
         android:padding="5dp">
 
@@ -101,6 +128,8 @@
             android:id="@+id/tagtext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/colortext"
             android:padding="10dp"
             android:text="태그"
             android:textColor="#000000"
@@ -111,40 +140,47 @@
             android:id="@+id/AddPost_HashTag_Edittext"
             android:layout_width="230dp"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/tagtext"
             android:layout_alignParentEnd="true"
+            android:layout_below="@+id/color_Edittext"
             android:hint="#데이트룩, #러블리, ..."
             android:imeOptions="actionDone"
             android:lines="1"
             android:singleLine="true"
             android:textColor="#b3b3b3"
             android:textSize="15dp" />
+    </RelativeLayout>
 
-        <Button
-            android:id="@+id/cancel_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="left"
-            android:layout_marginLeft="30dp"
-            android:layout_marginBottom="40dp"
-
-            android:background="#0070C0"
-            android:text="취소"
-            android:textColor="#ffffff"
-            android:textStyle="bold" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="153dp"
+        android:background="#ffffff"
+        android:padding="5dp">
 
         <Button
             android:id="@+id/additem_insertbutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_gravity="right"
-            android:layout_marginRight="30dp"
+            android:layout_gravity="left"
             android:layout_marginBottom="40dp"
+            android:layout_marginLeft="30dp"
+
             android:background="#0070C0"
             android:text="편집"
+            android:textColor="#ffffff"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/cancel_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_gravity="right"
+            android:layout_marginBottom="40dp"
+            android:layout_marginRight="30dp"
+            android:background="#0070C0"
+            android:text="취소"
             android:textColor="#ffffff"
             android:textStyle="bold" />
 
