--- a/HangerApplication/app/src/main/res/layout/fragment_acc.xml
+++ b/HangerApplication/app/src/main/res/layout/fragment_acc.xml
@@ -55,7 +55,7 @@
         </RelativeLayout>
 
         <View
-            android:id="@+id/underline"
+            android:id="@+id/underline2"
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:layout_alignParentBottom="true"
@@ -68,29 +68,30 @@
             android:layout_height="wrap_content">
 
             <ImageButton
-                android:id="@+id/logoutnext"
+                android:id="@+id/unregisternext"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_alignBottom="@+id/logout"
+                android:layout_alignBottom="@+id/unregister"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
                 android:background="#0070C0"
                 app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp" />
 
             <Button
-                android:id="@+id/logout"
+                android:id="@+id/unregister"
                 android:layout_width="360dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_toStartOf="@+id/logoutnext"
+                android:layout_toStartOf="@+id/unregisternext"
                 android:background="#0070C0"
                 android:text="회원탈퇴"
                 android:textColor="#ffffff" />
+
         </RelativeLayout>
 
         <View
-            android:id="@+id/underline"
+            android:id="@+id/underline3"
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:layout_alignParentBottom="true"
@@ -103,25 +104,25 @@
             android:layout_height="wrap_content">
 
             <ImageButton
-                android:id="@+id/logoutnext"
+                android:id="@+id/editnext"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_alignBottom="@+id/logout"
+                android:layout_alignBottom="@+id/edit"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
                 android:background="#0070C0"
                 app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp" />
 
             <Button
-                android:id="@+id/logout"
+                android:id="@+id/edit"
                 android:layout_width="360dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_toStartOf="@+id/logoutnext"
                 android:background="#0070C0"
                 android:text="회원 정보 수정"
                 android:textColor="#ffffff" />
+
         </RelativeLayout>
 
         <View
@@ -137,22 +138,22 @@
             android:layout_height="wrap_content">
 
             <ImageButton
-                android:id="@+id/logoutnext"
+                android:id="@+id/qnanext"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_alignBottom="@+id/logout"
+                android:layout_alignBottom="@+id/qna"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
                 android:background="#0070C0"
                 app:srcCompat="@drawable/ic_keyboard_arrow_right_black_24dp" />
 
             <Button
-                android:id="@+id/logout"
+                android:id="@+id/qna"
                 android:layout_width="360dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_toStartOf="@+id/logoutnext"
+                android:layout_toStartOf="@+id/qnanext"
                 android:background="#0070C0"
                 android:text="문의/건의하기"
                 android:textColor="#ffffff" />
