--- a/HangerApplication/app/src/main/res/layout/fragment_acc.xml
+++ b/HangerApplication/app/src/main/res/layout/fragment_acc.xml
@@ -49,6 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
+                android:layout_toStartOf="@+id/logoutnext"
                 android:background="#0070C0"
                 android:text="로그아웃"
                 android:textColor="#ffffff" />
@@ -119,6 +120,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
+                android:layout_toStartOf="@+id/editnext"
                 android:background="#0070C0"
                 android:text="회원 정보 수정"
                 android:textColor="#ffffff" />
