--- a/HangerApplication/app/src/main/res/layout/fragment_dress.xml
+++ b/HangerApplication/app/src/main/res/layout/fragment_dress.xml
@@ -6,6 +6,8 @@
     tools:context="com.example.geehy.hangerapplication.Fragments.DressFragment">
 
 
+
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/dress_fbtn"
         android:layout_width="match_parent"
@@ -20,16 +22,15 @@
         app:elevation="5dp"
         app:fabSize="normal"
         app:rippleColor="#000000" />
-    <ImageView
-        android:id="@+id/dashimgtemp1"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_gravity="bottom|right"
-        android:layout_marginBottom="30dp"
-        android:layout_marginRight="220dp"
-        android:layout_weight="0.02"
-        app:srcCompat="@drawable/tem3" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
     <LinearLayout
         android:id="@+id/dress_insert_Layout"
@@ -42,7 +43,7 @@
         android:visibility="gone">
 
         <Button
-            android:id="@+id/dash_closet_btn"
+            android:id="@+id/dress_closet_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
@@ -54,7 +55,7 @@
             android:visibility="visible" />
 
         <Button
-            android:id="@+id/dash_coordy_btn"
+            android:id="@+id/dress_coordy_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
@@ -65,10 +66,10 @@
             android:textSize="20dp"
             android:visibility="visible" />
     </LinearLayout>
-
+    </RelativeLayout>
+    </LinearLayout>
     <CalendarView
         android:id="@+id/calendar"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
 </FrameLayout>
