--- a/HangerApplication/app/src/main/res/layout/fragment_dress.xml
+++ b/HangerApplication/app/src/main/res/layout/fragment_dress.xml
@@ -18,7 +18,7 @@
         android:layout_weight="0.03"
         android:src="@drawable/ic_add_black_24dp"
         app:background="@color/colorPrimary"
-        app:backgroundTint="#0070C0"
+        app:backgroundTint="#9848d1"
         app:elevation="5dp"
         app:fabSize="normal"
         app:rippleColor="#000000" />
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_weight="1"
-            android:background="#0070C0"
+            android:background="#9848d1"
             android:text="♡Add Clothes♡"
             android:textColor="#ffffff"
             android:textSize="20dp"
@@ -60,7 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_weight="1"
-            android:background="#0070C0"
+            android:background="#9848d1"
             android:text="♡Add Coordy♡"
             android:textColor="#ffffff"
             android:textSize="20dp"
