--- a/HangerApplication/app/src/main/res/layout/activity_forgot.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_forgot.xml
@@ -109,7 +109,7 @@
             android:id="@+id/loginagain_button"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:background="#0070C0"
+            android:background="#9848d1"
             android:elevation="0dp"
             android:gravity="center"
             android:text="Login Again"
