--- a/HangerApplication/app/src/main/res/layout/activity_login.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_login.xml
@@ -84,7 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_weight="3.14"
-                android:background="#0070C0"
+                android:background="#9848d1"
                 android:elevation="0dp"
                 android:text="SIGN IN"
                 android:textColor="#ffffff"
