--- a/HangerApplication/app/src/main/res/layout/activity_signup.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_signup.xml
@@ -104,7 +104,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="#ffffff"
-                        android:background="#0070C0"
+                        android:background="#9848d1"
                         android:text="중복체크" />
                 </LinearLayout>
 
