--- a/HangerApplication/app/src/main/res/layout/fragment_dash.xml
+++ b/HangerApplication/app/src/main/res/layout/fragment_dash.xml
@@ -16,7 +16,7 @@
         android:layout_weight="0.03"
         android:src="@drawable/ic_add_black_24dp"
         app:background="@color/colorPrimary"
-        app:backgroundTint="#0070C0"
+        app:backgroundTint="#9848d1"
         app:elevation="5dp"
         app:fabSize="normal"
         app:rippleColor="#000000" />
