--- a/HangerApplication/app/src/main/res/layout/fragment_home.xml
+++ b/HangerApplication/app/src/main/res/layout/fragment_home.xml
@@ -18,7 +18,7 @@
         android:layout_weight="0.03"
         android:src="@drawable/ic_photo_camera"
         app:background="@color/colorPrimary"
-        app:backgroundTint="#0070C0"
+        app:backgroundTint="#9848d1"
         app:elevation="5dp"
         app:fabSize="normal"
         app:rippleColor="#000000" />
@@ -61,7 +61,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
                     android:layout_weight="1"
-                    android:background="#0070C0"
+                    android:background="#9848d1"
                     android:text="♡CAMERA♡"
                     android:textColor="#ffffff"
                     android:textSize="20dp"
@@ -73,7 +73,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
                     android:layout_weight="1"
-                    android:background="#0070C0"
+                    android:background="#9848d1"
                     android:text="♡GALLERY♡"
                     android:textColor="#ffffff"
                     android:textSize="20dp"
