--- a/HangerApplication/app/src/main/res/layout/fragment_temp.xml
+++ b/HangerApplication/app/src/main/res/layout/fragment_temp.xml
@@ -40,7 +40,7 @@
                 android:layout_width="355dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:background="#0070C0"
+                android:background="#9848d1"
                 android:text="♡Hanger님을 위한 오늘의 추천 보기♡"
                 android:textColor="#ffffff" />
         </LinearLayout>
