새로운것 8개 추가 17개 변경

--- a/HangerApplication/app/src/main/res/layout/item_acc_girdview.xml
+++ b/HangerApplication/app/src/main/res/layout/item_acc_girdview.xml
@@ -10,8 +10,8 @@
     <ImageView
         android:id="@+id/accitem"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:srcCompat="@drawable/default1" />
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/tempimg" />
 
     <TextView
         android:id="@+id/item_accname"
