--- a/HangerApplication/app/src/main/res/layout/activity_edit_closet.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_edit_closet.xml
@@ -111,12 +111,11 @@
 
         <TableRow
             android:layout_width="230dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@id/colorText"
-            android:stretchColumns="0,1,2"
-            >
+            android:stretchColumns="0,1,2">
 
             <TextView
                 android:id="@+id/colorview1"
@@ -129,7 +128,7 @@
                 android:gravity="center"
                 android:textSize="15dp" />
 
-            <EditText
+            <TextView
                 android:id="@+id/color_Edittext"
                 android:layout_width="15dp"
                 android:layout_height="match_parent"
@@ -137,7 +136,7 @@
                 android:layout_marginLeft="15dp"
                 android:layout_toRightOf="@id/colorview1"
                 android:layout_weight="1"
-                android:gravity="center_horizontal"
+                android:gravity="center"
                 android:lines="1"
                 android:singleLine="true"
                 android:textColor="#000000"
