--- a/HangerApplication/app/src/main/res/layout/activity_signup_approved.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_signup_approved.xml
@@ -20,16 +20,16 @@
         android:id="@+id/imageView8"
         android:layout_width="357dp"
         android:layout_height="198dp"
-        app:srcCompat="@drawable/emailicon"
-        android:layout_weight="0.11" />
+        android:layout_weight="0.11"
+        app:srcCompat="@drawable/tempimg" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="147dp"
+        android:layout_weight="0.28"
         android:gravity="center|top"
         android:orientation="vertical"
-        android:weightSum="1"
-        android:layout_weight="0.28">
+        android:weightSum="1">
 
         <TextView
             android:id="@+id/editText"
@@ -73,7 +73,7 @@
             tools:layout_editor_absoluteY="431dp" />
 
         <Button
-            android:id="@+id/loginagain_button"
+            android:id="@+id/loginagain_button2"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:background="#9848d1"
