--- a/HangerApplication/app/src/main/res/layout/fragment_dash.xml
+++ b/HangerApplication/app/src/main/res/layout/fragment_dash.xml
@@ -8,7 +8,7 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/dash_fbtn"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:layout_marginBottom="72dp"
@@ -21,44 +21,20 @@
         app:fabSize="normal"
         app:rippleColor="#000000" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
-
-
-        <LinearLayout
-            android:id="@+id/dash_insert_layout"
+        <GridView
+            android:id="@+id/dash_gridview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"
-            android:background="#ffffff"
-            android:orientation="horizontal"
-            android:visibility="gone">
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:numColumns="3" />
 
-            <Button
-                android:id="@+id/selimg"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_weight="1"
-                android:background="#0070C0"
-                android:text="♡Select♡"
-                android:textColor="#ffffff"
-                android:textSize="20dp"
-                android:visibility="visible" />
 
-            <Button
-                android:id="@+id/uploadimg"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_weight="1"
-                android:background="#0070C0"
-                android:text="♡Upload♡"
-                android:textColor="#ffffff"
-                android:textSize="20dp"
-                android:visibility="visible" />
-        </LinearLayout>
-
+    </RelativeLayout>
 
 
 </FrameLayout>
