--- a/HangerApplication/app/src/main/res/layout/activity_add_clothes.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_add_clothes.xml
@@ -19,16 +19,33 @@
         >
     <ListView
         android:id="@+id/listview1"
-        android:layout_width="110dp"
+        android:layout_width="75dp"
         android:layout_height="390dp" />
 
 
-    <ImageView
-        android:id="@+id/add_dress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        app:srcCompat="@drawable/default2" />
+        <ListView
+            android:id="@+id/listview2"
+            android:layout_width="90dp"
+            android:layout_height="390dp"
+            android:divider="@null"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+
+            <ImageView
+                android:id="@+id/add_dress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="15dp"
+                app:srcCompat="@drawable/default2" />
+
+
+
+        </LinearLayout>
+
     </LinearLayout>
 
     <RelativeLayout
