--- a/HangerApplication/app/src/main/res/layout/activity_calendar.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_calendar.xml
@@ -9,13 +9,22 @@ android:orientation="vertical"
 android:weightSum="1">
 
     <ImageView
-        android:id="@+id/calendar_img"
+        android:id="@+id/imageView2"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center"
-        android:src="@drawable/default1" />
+        android:layout_height="50dp"
+        app:srcCompat="@drawable/hanger" />
+
+
+
+    <GridView
+            android:id="@+id/calendar_gridview"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:columnWidth="100dp"
+        android:horizontalSpacing="10dp"
+        android:numColumns="2"
+        android:padding="10dp"
+        android:verticalSpacing="10dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -26,19 +35,10 @@ android:weightSum="1">
         android:padding="5dp">
 
 
-        <EditText
-            android:id="@+id/date_edittext"
+        <TextView
+            android:id="@+id/date_text"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/color_Edittext"
-            android:background="@null"
-            android:cursorVisible="false"
-            android:imeOptions="actionDone"
-            android:lines="1"
-            android:singleLine="true"
             android:textColor="#000000"
             android:textAlignment="center"
             android:textSize="17dp" />
@@ -46,12 +46,6 @@ android:weightSum="1">
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="#ffffff"
-        android:padding="5dp">
-    </RelativeLayout>
 
 
     <RelativeLayout
