--- a/HangerApplication/app/src/main/res/layout/fragment_dress.xml
+++ b/HangerApplication/app/src/main/res/layout/fragment_dress.xml
@@ -50,7 +50,7 @@
             android:layout_gravity="bottom"
             android:layout_weight="1"
             android:background="#9848d1"
-            android:text="♡Coordy♡"
+            android:text="♡Daily Look♡"
             android:textColor="#ffffff"
             android:textSize="20dp"
             android:visibility="visible" />
