--- a/HangerApplication/app/src/main/res/layout/simple_list_item.xml
+++ b/HangerApplication/app/src/main/res/layout/simple_list_item.xml
@@ -7,10 +7,14 @@
     android:orientation="vertical">
 
 
-    <ImageView
-        android:id="@+id/listimg"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+    <TextView
+        android:id="@+id/listtext"
+        android:layout_width="70dp"
+        android:layout_height="40dp"
+        android:textSize="16dp"
+        android:textColor="#000000"
+android:layout_gravity="bottom"
+        android:textAlignment="center"
         app:srcCompat="@drawable/default1" />
 
 
