달력-삭제하기(미완성) 날씨-사진 스크롤

--- a/HangerApplication/app/src/main/res/layout/activity_codi_info.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_codi_info.xml
@@ -69,7 +69,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/likebtn"
+            android:layout_toEndOf="@+id/likebtn"
             android:background="@android:color/white"
             app:srcCompat="@android:drawable/ic_menu_edit" />
 
