--- a/HangerApplication/app/src/main/res/layout/activity_edit_closet.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_edit_closet.xml
@@ -14,8 +14,7 @@
         android:id="@+id/additem_imagethumb"
         android:layout_width="match_parent"
         android:layout_height="225dp"
-        android:layout_gravity="center"
-        android:src="@drawable/default1" />
+        android:layout_gravity="center" />
 
     <!--
    <TextView
