--- a/HangerApplication/app/src/main/res/layout/activity_calendar.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_calendar.xml
@@ -8,12 +8,13 @@ android:minWidth="300dp"
 android:orientation="vertical"
 android:weightSum="1">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:srcCompat="@drawable/hanger" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="#ffffff"
+        android:padding="5dp">
+    </RelativeLayout>
 
 
     <GridView
@@ -23,8 +24,18 @@ android:weightSum="1">
         android:columnWidth="100dp"
         android:horizontalSpacing="10dp"
         android:numColumns="2"
-        android:padding="10dp"
+        android:padding="5dp"
         android:verticalSpacing="10dp" />
+
+    <ImageButton
+        android:id="@+id/delete_btn"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="right"
+        android:layout_toRightOf="@+id/codi_info_edit_btn"
+        android:background="@color/colorWhite"
+        android:elevation="0dp"
+        app:srcCompat="@android:drawable/ic_menu_delete" />
 
     <RelativeLayout
         android:layout_width="match_parent"
