--- a/HangerApplication/app/src/main/res/layout/fragment_temp.xml
+++ b/HangerApplication/app/src/main/res/layout/fragment_temp.xml
@@ -13,37 +13,47 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/showWeather"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:padding="15dp"
+                android:padding="10dp"
                 android:text="Today's Pick"
                 android:textSize="25dp"
                 android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/imageView7"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:padding="20dp"
-                app:srcCompat="@drawable/temper" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:orientation="horizontal">
 
+            <cn.trinea.android.view.autoscrollviewpager.AutoScrollViewPager
+                android:id="@+id/autoViewPager"
+                android:layout_width="wrap_content"
+                android:layout_height="300dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                >
+
+            </cn.trinea.android.view.autoscrollviewpager.AutoScrollViewPager>
+
+
+        </LinearLayout>
             <Button
                 android:id="@+id/getWeatherBTN"
-                android:layout_width="355dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:background="#9848d1"
                 android:text="♡Hanger님을 위한 오늘의 추천 보기♡"
                 android:textColor="#ffffff" />
-        </LinearLayout>
+
 
     </LinearLayout>
 
