--- a/HangerApplication/app/src/main/res/layout/item_calendar_grid.xml
+++ b/HangerApplication/app/src/main/res/layout/item_calendar_grid.xml
@@ -3,31 +3,45 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:minHeight="400dp"
-    android:minWidth="300dp"
+    android:background="#ffffff"
     android:orientation="vertical"
-    android:weightSum="1">
+    android:padding="5dp">
 
-
+        <LinearLayout
+            android:id="@+id/dress_insert_Layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:background="#ffffff"
+            android:orientation="horizontal">
 
         <TextView
             android:id="@+id/item_calendar1"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:padding="5dp"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="16dp" />
 
+        <CheckBox
+            android:id="@+id/check"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            />
+
+        </LinearLayout>
 
 
         <ImageView
             android:id="@+id/item_calendar2"
-            android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:padding="10dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             app:srcCompat="@drawable/default2" />
+
 
 
 
