--- a/HangerApplication/app/src/main/res/layout/activity_edit_codi_info.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_edit_codi_info.xml
@@ -36,47 +36,61 @@
             android:layout_alignParentBottom="true"
             android:gravity="center">
 
+            <Button
+                android:id="@+id/noBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@+id/saveBtn"
+                android:backgroundTint="@color/colorPrimary"
+                android:text="취소"
+                android:textSize="10sp" />
+
+            <Button
+                android:id="@+id/saveBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:backgroundTint="@color/colorPrimary"
+                android:text="저장"
+                android:textSize="10sp" />
         </RelativeLayout>
 
         <GridView
             android:id="@+id/add_gridview"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="150dp"
             android:layout_above="@+id/button_layout"
             android:numColumns="3">
 
         </GridView>
 
+        <ImageView
+            android:id="@+id/top_View"
+            android:layout_width="200dp"
+            android:layout_height="150dp"
+            android:layout_above="@+id/bottom_View"
+            android:layout_below="@+id/addcoordy_name"
+            android:layout_centerHorizontal="true"
+            app:srcCompat="@drawable/tempimg" />
+
+        <ImageView
+            android:id="@+id/bottom_View"
+            android:layout_width="200dp"
+            android:layout_height="150dp"
+            android:layout_above="@+id/categorySpinner"
+            android:layout_alignStart="@+id/top_View"
+            app:srcCompat="@drawable/tempimg" />
+
         <EditText
             android:id="@+id/addcoordy_name"
-            android:layout_width="150dp"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/imageView9"
             android:ems="10"
             android:hint="이름을 지어주세요"
             android:inputType="textPersonName" />
-
-        <RelativeLayout
-            android:id="@+id/codi_main_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/categorySpinner"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/addcoordy_name">
-
-            <ImageView
-                android:id="@+id/top_View"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="false"
-                android:layout_alignParentEnd="false" />
-
-            <ImageView
-                android:id="@+id/bottom_View"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </RelativeLayout>
 
         <ImageView
             android:id="@+id/imageView9"
@@ -88,24 +102,6 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="10dp"
             app:srcCompat="@drawable/hangericon" />
-
-        <ImageButton
-            android:id="@+id/noBtn"
-            android:layout_width="40dp"
-            android:layout_height="45dp"
-            android:layout_above="@+id/codi_main_layout"
-            android:layout_toEndOf="@+id/saveBtn"
-            android:backgroundTint="@color/colorPrimary"
-            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
-
-        <ImageButton
-            android:id="@+id/saveBtn"
-            android:layout_width="40dp"
-            android:layout_height="45dp"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/addcoordy_name"
-            android:backgroundTint="@color/colorPrimary"
-            app:srcCompat="@android:drawable/ic_menu_save" />
 
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
