--- a/HangerApplication/app/src/main/res/values/colors.xml
+++ b/HangerApplication/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#c990db</color>
-    <color name="colorPrimaryDark">#9848d1</color>
+    <color name="colorPrimaryDark">#6a219d</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#ffffff</color>
