--- a/HangerApplication/app/src/main/res/layout/activity_codi_info.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_codi_info.xml
@@ -1,84 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:gravity="center"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.492">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/edit_codi_name"
-            android:layout_width="150dp"
+            android:layout_width="100dp"
             android:layout_height="50dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="20dp"
-            android:ems="10"
-            android:gravity="center"
-            android:inputType="textPersonName"
-            android:text="Name"
-            android:textAlignment="viewStart"
+            android:layout_above="@+id/codiinfo_top"
+            android:layout_alignStart="@+id/codiinfo_top"
+            android:gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:text="NAME"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="18sp"
             android:textStyle="bold" />
-
-        <ImageView
-            android:id="@+id/codiiffo_top"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/likebtn"
-            app:srcCompat="@drawable/tempimg" />
-
-        <ImageView
-            android:id="@+id/codiinfo_bottom"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/codiiffo_top"
-            app:srcCompat="@drawable/tempimg" />
 
         <ImageButton
             android:id="@+id/likebtn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="14dp"
-            android:layout_toRightOf="@+id/edit_codi_name"
+            android:layout_toEndOf="@+id/edit_codi_name"
             android:backgroundTint="@android:color/white"
             app:srcCompat="@drawable/like_blank" />
 
         <ImageButton
-            android:id="@+id/codi_info_delete_btn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/codi_info_edit_btn"
-            android:background="@color/colorWhite"
-            android:elevation="0dp"
-            app:srcCompat="@android:drawable/ic_menu_delete" />
-
-        <ImageButton
             android:id="@+id/codi_info_edit_btn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_toRightOf="@+id/likebtn"
-            android:background="@android:color/white"
+            android:layout_toEndOf="@+id/likebtn"
+            android:backgroundTint="@android:color/white"
             app:srcCompat="@android:drawable/ic_menu_edit" />
 
-    </RelativeLayout>
+        <ImageButton
+            android:id="@+id/codi_info_delete_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/codi_info_edit_btn"
+            android:backgroundTint="@android:color/white"
+            app:srcCompat="@android:drawable/ic_menu_delete" />
 
+        <ImageView
+            android:id="@+id/codiinfo_top"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="false"
+            android:layout_below="@+id/likebtn"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="false"
+            app:srcCompat="@drawable/tempimg" />
+
+        <ImageView
+            android:id="@+id/codiinfo_bottom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/codiinfo_top"
+            android:layout_below="@+id/codiinfo_top"
+            android:layout_centerHorizontal="true" />
+    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
