--- a/HangerApplication/app/src/main/res/layout/fragment_dash.xml
+++ b/HangerApplication/app/src/main/res/layout/fragment_dash.xml
@@ -1,8 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:background="#ffffff"
     tools:context="com.example.geehy.hangerapplication.Fragments.DashFragment">
 
@@ -22,14 +22,14 @@
         app:rippleColor="#000000" />
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_weight="1">
 
         <GridView
             android:id="@+id/dash_gridview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:gravity="center"
             android:numColumns="2" />
 
