날씨하는중입니다 ~ 서버연동 아직 안됨 코디부분은 좋아요 버튼을 누른 코디를 가지고 와서 뷰페이지에 보여줌

--- a/HangerApplication/app/src/main/res/values/colors.xml
+++ b/HangerApplication/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#e0c6e8</color>
+    <color name="colorPrimary">#dbafe8</color>
     <color name="colorPrimaryDark">#6a219d</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorBlack">#000000</color>
