--- a/HangerApplication/app/src/main/res/layout/activity_weather.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_weather.xml
@@ -64,22 +64,23 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/image1"
-            android:layout_width="170dp"
-            android:layout_height="200dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            app:srcCompat="@drawable/default1"/>
+            app:srcCompat="@drawable/camera" />
 
 
         <ImageView
             android:id="@+id/image2"
             android:layout_width="wrap_content"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            app:srcCompat="@drawable/default1"/>
+            app:srcCompat="@drawable/camera" />
 
     </LinearLayout>
 
