--- a/HangerApplication/app/src/main/res/layout/fragment_temp.xml
+++ b/HangerApplication/app/src/main/res/layout/fragment_temp.xml
@@ -14,9 +14,13 @@
         android:orientation="vertical">
 
 
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
             <TextView
                 android:id="@+id/showWeather"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:padding="10dp"
@@ -24,11 +28,24 @@
                 android:textSize="25dp"
                 android:textStyle="bold" />
 
+            <Button
+                android:id="@+id/getWeatherBTN"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="15dp"
+                android:layout_toEndOf="@+id/showWeather"
+                android:layout_toRightOf="@+id/showWeather"
+                android:background="@color/colorPrimary"
+                android:text="..."
+                android:textColor="#ffffff"
+                android:textStyle="bold" />
+        </RelativeLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="10dp">
 
             <cn.trinea.android.view.autoscrollviewpager.AutoScrollViewPager
                 android:id="@+id/autoViewPager"
@@ -36,23 +53,12 @@
                 android:layout_height="300dp"
                 android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                >
+                android:layout_marginRight="10dp">
 
             </cn.trinea.android.view.autoscrollviewpager.AutoScrollViewPager>
 
 
         </LinearLayout>
-            <Button
-                android:id="@+id/getWeatherBTN"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:background="#9848d1"
-                android:text="♡Hanger님을 위한 오늘의 추천 보기♡"
-                android:textColor="#ffffff" />
 
 
     </LinearLayout>
